--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                 </div>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
@@ -78,9 +77,9 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Opciones:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Rutas</a>
-                        <a class="collapse-item" href="utilities-border.html">Descuentos Y Promociones</a>
-                        <a class="collapse-item" href="utilities-animation.html">Inventario</a>
+                        <a class="collapse-item" href="rutas.html">Rutas</a>
+                        <a class="collapse-item" href="descuentos.html">Descuentos Y Promociones</a>
+                        <a class="collapse-item" href="inventario.html">Inventario</a>
                     </div>
                 </div>
             </li>
