--- a/sidebar.html
+++ b/sidebar.html
@@ -78,9 +78,9 @@
                 data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Opciones:</h6>
-                    <a class="collapse-item" href="utilities-color.html">Rutas</a>
-                    <a class="collapse-item" href="utilities-border.html">Descuentos Y Promociones</a>
-                    <a class="collapse-item" href="utilities-animation.html">Inventario</a>
+                    <a class="collapse-item" href="rutas.html">Rutas</a>
+                    <a class="collapse-item" href="descuentos.html">Descuentos Y Promociones</a>
+                    <a class="collapse-item" href="inventario.html">Inventario</a>
                 </div>
             </div>
         </li>
