--- a/gestion-productos.html
+++ b/gestion-productos.html
@@ -300,8 +300,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" onclick="actualizarProducto()">Actualizar</button>
+                    <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-sm btn-primary" onclick="actualizarProducto()">Actualizar</button>
                 </div>
             </div>
         </div>
