--- a/gestion-usuario.html
+++ b/gestion-usuario.html
@@ -259,8 +259,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" onclick="actualizarUsuario()">Actualizar</button>
+                    <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-sm btn-primary" onclick="actualizarUsuario()">Actualizar</button>
                 </div>
             </div>
         </div>
