--- a/gestion-puntos.html
+++ b/gestion-puntos.html
@@ -228,7 +228,6 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Editar Punto de Venta</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="modalBody">
                     <div id="detallePuntoVentaContent"></div>
@@ -261,15 +260,9 @@
                             <label for="zona" class="form-label">Zona</label>
                             <input type="text" class="form-control" id="zona" placeholder="Ingrese la zona" required>
                         </div>
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Cerrar</button>
-                                    <button type="button" class="btn btn-primary"
-                                        onclick="actualizarPuntoVenta()">Actualizar</button>
-                                </div>
-                            </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-sm btn-primary" onclick="actualizarPuntoVenta()">Actualizar</button>
                         </div>
                     </div>
 
@@ -446,6 +439,8 @@
                     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
                     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
                     <script src="js/sb-admin-2.min.js"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
