--- a/gestion-puntos.html
+++ b/gestion-puntos.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Gestión de Puntos de Venta - 8Eleven</title>
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
@@ -293,7 +296,6 @@
                                 })
                                 .catch(error => {
                                     console.error('Error:', error);
-                                    alert('Error al cargar los detalles del punto de venta');
                                 });
                         }
 
