--- a/usuarios.html
+++ b/usuarios.html
@@ -11,6 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -270,7 +273,7 @@
             },
             buttonsStyling: false
         });
-        
+
         function submitForm() {
             console.log('submitForm');
             const formData = {
