--- a/gestion-productos.html
+++ b/gestion-productos.html
@@ -79,9 +79,9 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Opciones:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Rutas</a>
-                        <a class="collapse-item" href="utilities-border.html">Descuentos Y Promociones</a>
-                        <a class="collapse-item" href="utilities-animation.html">Inventario</a>
+                        <a class="collapse-item" href="rutas.html">Rutas</a>
+                        <a class="collapse-item" href="descuentos.html">Descuentos Y Promociones</a>
+                        <a class="collapse-item" href="inventario.html">Inventario</a>
                     </div>
                 </div>
             </li>
@@ -117,13 +117,6 @@
                 <a class="nav-link" href="charts.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Ganancias</span></a>
-            </li>
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Perdidas</span></a>
             </li>
 
             <!-- Divider -->
