--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="ganancias.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Ganancias</span></a>
             </li>
